--- a/stylesheet.css
+++ b/stylesheet.css
@@ -87,7 +87,7 @@ li {
   margin-right: 0;
   padding-left:-10px;
   padding-right:-10px;
-  padding-top:25px;
+  padding-top:50px;
   padding-bottom: 1em;
 }
 
@@ -107,11 +107,22 @@ li {
   font-size: 18px
 }
 
+.project_caption{
+  height: auto;
+  width: 600px;
+  margin: auto;
+  text-align: center;
+  color: gray;
+  line-height:120%;
+  font-size: 14px;
+  padding-top:25px;
+  padding-bottom:100px;
+}
 
 #slideshow_wrapper{
   display: block;
   height: 360px;
-  width: 480px;
+  width: 1000px;
   margin: auto;
 }
 
@@ -120,7 +131,7 @@ li {
   display: block;
   float: left;
   height: 360px;
-  width: 480px;
+  width: 1000px;
   overflow: auto;
 }
 
@@ -154,64 +165,11 @@ li {
   display: block;
   float: left;
   height: 360px;
-  width: 480px;
+  width: 1000px;
   overflow: hidden;
   position: absolute;
   border: solid 1px black;
 }
-
-/*#slideshow_wrapper{
-display: block;
-height: 720px;
-width: 960px;
-margin: auto;
-}
-
-#slideshow_container{
-background-color: #FFC;
-display: block;
-float: left;
-height: 720px;
-width: 960px;
-overflow: auto;
-}
-
-#slideshow_prev{
-background-image: url(images/Arrow_left_40px.png);
-background-repeat: no-repeat;
-background-position: center center;
-display: block;
-float: left;
-height: 720px;
-width: 75px;
-position: relative;
-z-index: 99;
-padding-right: 15px;
-}
-
-#slideshow_next{
-background-image: url(images/Arrow_right_40px.png);
-background-repeat: no-repeat;
-background-position: center center;
-display: block;
-float: right;
-height: 720px;
-width: 75px;
-position: relative;
-z-index: 99;
-padding-right:15px
-}
-
-#slideshow_slider{
-display: block;
-float: left;
-height: 720px;
-width: 960px;
-overflow: hidden;
-position: absolute;
-border: solid 1px black;
-}*/
-
 
 .footer_container{
   height: 5350px;
