--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,11 @@ border: 2px dotted red;
 
 .cycle-slideshow { width: 50% }
 .cycle-slideshow img { width: 100%; height: auto }
+.cycle-prev, .cycle-next { position: absolute; top: 0; width: 30%; opacity: 0; filter: alpha(opacity=0); z-index: 800; height: 100%; cursor: pointer; }
+.cycle-prev { left: 0;  background: url(/images/Arrow_left_40px.png) 50% 50% no-repeat;}
+.cycle-next { right: 0; background: url(/images/Arrow_right_40px.png) 50% 50% no-repeat;}
+.cycle-prev:hover, .cycle-next:hover { opacity: .7; filter: alpha(opacity=70) }
+
 
 body {
   margin: 0;
