--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,57 @@ border: 2px dotted red;
 }*/
 
 
+#table{
+  position: relative;
+  padding-top:50px;
+}
+
+
+#one{
+  height: auto;
+  width: 400px;
+  line-height:125%;
+  font-size:24px;
+  color:#CCCCCC;
+  text-align: center;
+  margin-bottom:10px;
+  margin-top:20px; 
+  margin-left:35px;
+}
+
+
+#two{
+  height: auto;
+  width: 400px;
+  color:gray;
+  line-height:70%;
+  font-family: Futura, Tahoma, sans-serif;
+  margin-left:40px;
+
+}
+
+#three{
+  height: auto;
+  width: 400px;
+  color:gray;
+  line-height:140%;
+  font-family: Futura, Tahoma, sans-serif;
+  font-size: 12px;
+  margin-left:40px;
+}
+
+#four{
+  height: auto;
+  width: 800px;
+  color:gray;
+  line-height:140%;
+  font-family: Futura, Tahoma, sans-serif;
+  font-size: 10px;
+  padding-top:10px;
+}
+
+
+
 .cycle-slideshow { width: 50% }
 .cycle-slideshow img { width: 100%; height: auto }
 .cycle-prev, .cycle-next { position: absolute; top: 0; width: 30%; opacity: 0; filter: alpha(opacity=0); z-index: 800; height: 100%; cursor: pointer; }
@@ -16,16 +67,13 @@ body {
   padding: 0;
 }
 
-.container{
-}
-
 #navbar{
   position: fixed;
   color: #383838;
   margin-top:20px;
   margin-left:-400px;
   display: inline-block;
-  left:30%;
+  left:33%;
   z-index: 999;
 }
 
@@ -39,7 +87,7 @@ li {
   display: inline-block;
   padding: 5px;
   font-family: Futura, Tahoma, sans-serif;
-  font-size: 11px;
+  font-size: 10px;
   margin:2px;
 }
 
@@ -51,7 +99,6 @@ li {
   margin-top: -10px;
   position: relative;
   padding-top:50px;
-  padding-left:100px;
   background-color: #2E2E2E;
 }
 
@@ -60,7 +107,7 @@ li {
   height: 400px;
   width: 600px;
   position: absolute;
-  margin-left: 200px;
+  margin-left: 400px;
   margin-top: 200px;
 }
 
